<resources>
    <string name="app_name">Mobile_app_CA1_23643_LucianoGimenez</string>
    <string name="full_name">Luciano Gimenez</string>
    <string name="email">23643@student.dorset-college.ie</string>
    <string name="intro">More than 8 years of managerial and administrative experience provided me with the ability to work in teams and moulded me into an entrepreneur. Throughout my education I gained knowledge for managing services industry, project planning and business development. Looking for a position to further polish my skills and build on my experience.</string>
    <string name="education">Education</string>
    <string name="skills">Skills</string>
    <string name="hobbies">Hobbies</string>
    <string name="achievements">Achievements</string>
    <string name="copyright">© Copyright Luciano Gimenez 2022</string>
    <string name="copyright_2">Built with Android Studio</string>
    <string name="close">Close</string>
    <string name="educationRow1Institute">Dorset College, Ireland</string>
    <string name="educationRow1Title">BACHELOR’S DEGREE: COMPUTING</string>
    <string name="educationRow1Description">Completed the first year by passing the exams in Computer Fundamentals, Computational Thinking and Problem-Solving, Interpersonal Skills for IT, UX/UI Design and Usability, Programming Essentials, Management Information Systems, Networking Technologies, Mathematics, and Software-Defined Computing. Gaining all the necessary skills to work in software development, computer programming, cyber-security, and computer networks settings.</string>
    <string name="educationRow2Institute">National University of Rosario, Argentina</string>
    <string name="educationRow2Title">BACHELOR’S DEGREE: PRODUCTION OF GOODS AND SERVICES</string>
    <string name="educationRow2Description">Completed a technical program focused on physics, mathematics, computer science, goods production and management, as well as operational logistics.</string>
    <string name="educationRow3Institute">Rice University, Coursera online</string>
    <string name="educationRow3Title">CERTIFICATE: FUNDAMENTALS OF COMPUTING SPECIALIZATION</string>
    <string name="educationRow3Description">The specialization covers interactive programming in Python, principles of computing, and algorithmic thinking. Upon completion, will be able to carry out object-oriented programming (OOP), understand algorithms, and be familiar with graph theory and tree data structure.</string>
    <string name="educationRow4Institute">CISCO Networking Academy, online</string>
    <string name="educationRow4Title">CERTIFICATE: SWITCHING, ROUTING, AND WIRELESS ESSENTIALS</string>
    <string name="educationRow4Description">Acquiring skills needed to configure and troubleshoot VLANs, Wireless LANs, and Inter-VLAN routing and troubleshoot redundancy on a switched network using STP and EtherChannel.</string>
    <string name="educationRow5Title">CERTIFICATE: NDG LINUX ESSENTIALS</string>
    <string name="educationRow5Description">Gaining an understanding of how Linux is used and mastering Linux commands.</string>
    <string name="skillRow1">Java</string>
    <string name="skillRow2">Python</string>
    <string name="skillrow3">C#</string>
    <string name="skillrow4">MySQL</string>
    <string name="skillrow5">Android Studio</string>
    <string name="skillrow6">Azure</string>
    <string name="skillrow7">HTML</string>
    <string name="skillrow8">JavaScript</string>
    <string name="skillrow9">Node.js</string>
    <string name="hobbie1">\u2022 Playing chess</string>
    <string name="hobbie1Description">Playing chess—great way to unwind, distress, and keep the mind sharp.</string>
    <string name="hobbie2">\u2022 Travelling</string>
    <string name="hobbie2Description">Make and plan annual trips to different countries to experience new cultures.</string>
    <string name="hobbie3">\u2022 Community service</string>
    <string name="hobbie3Description">Actively volunteer at a local community soup kitchen twice a month to prepare and serve food.</string>
    <string name="hobbie4">\u2022 Cooking </string>
    <string name="hobbie4Description">Blogging about food, including recipes, cooking, and food photography</string>
    <string name="hobbie5">\u2022 Team sports</string>
    <string name="hobbie5Description">Plan and participate in a football tournament.</string>
    <string name="achievementsDescription"> I hold an IT Essentials: PC Hardware &amp; Software and Introduction to Networks certificates, and I am currently wrapping up Switching, Routing, and Wireless Essentials and NDG Linux Essentials courses. I have also enrolled in a Fundamentals of Computing Specialization course and should complete it by the summer of 2022. I am also in the middle of acquiring an NFQ Level 7 Bachelor’s Degree in Computer Science. Thanks to all that, I am familiar with development languages Python and Java, as well as Linux OS. I am able to configure and maintain common applications like MySQL and DNS, and I understand object-oriented design, algorithm design, data structures, problem-solving, and complexity analysis. Over the course of my career, I have held various positions and all of them required me to be extremely creative and flexible. Due to the nature of my roles, I have become adept at handling ambiguous and undefined problems and have developed the ability to think abstractly. In the past year, I realized that I would really like to get into the IT industry, so I started taking courses and did a lot of self-learning. Now, I am looking for a suitable place that can help me use all my potential and direct my growth. I would be thrilled to become a part of your team and further expand my knowledge and skills. I am sure that I am the perfect candidate for this internship due to my positive attitude, willingness to learn, and hardworking nature. I would love to get an opportunity to explain in more detail why I think our collaboration would be mutually beneficial.</string>
</resources>