<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#413A38"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/closeButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|top"
            android:layout_margin="10dp"
            android:backgroundTint="#DDDDDD"
            android:fillColor= "#FFFF0000"
            android:tint="#FFFF0000"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_baseline_close_24"
            app:fabSize="mini"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/full_name"
            android:textColor="#FEFCF9"
            android:textSize="30sp" />


        <TextView

            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/email"
            android:textColor="#FEFCF9"
            android:textSize="15sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/bio_photo"
            android:layout_width="wrap_content"
            android:layout_height="265dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:shapeAppearanceOverlay="@style/rounded_photo"
            app:srcCompat="@drawable/_3299239_10215936046627175_1532991406967095296_n" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="15dp"
            android:text="@string/intro"
            android:textColor="#FEFCF9"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/educationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="New Activity" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/skillsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/skills"
                android:src="@drawable/ic_iconmonstr_code_2"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/hobbiesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/hobbies"
                android:src="@drawable/ic_iconmonstr_gamepad_1" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/achievementsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/achievements"
                android:src="@drawable/ic_iconmonstr_medal_17" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright"
            android:textColor="#ff808080"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright_2"
            android:textColor="#ff808080"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>