<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#413A38"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/closeButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|top"
            android:layout_margin="10dp"
            android:backgroundTint="#DDDDDD"
            android:fillColor= "#FFFF0000"
            android:tint="#FFFF0000"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_baseline_close_24"
            app:fabSize="mini"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/education"
            android:textColor="#FEFCF9"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="490dp"
            android:background="#B1CABA"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/ic__t4cusht_400x400"
                        app:tint="#07398a" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:paddingVertical="5dp"
                            android:text="@string/educationRow1Institute"
                            android:textColor="#413A38"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/educationRow1Title"
                            android:textColor="#413A38"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/educationRow1Description"
                            android:textSize="15sp" />
                        />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bad6c4"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/ic__e4f3973b7d0965fcba3873123e39c01" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:paddingVertical="5dp"
                            android:text="@string/educationRow2Institute"
                            android:textColor="#413A38"
                            android:textStyle="bold"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:textColor="#413A38"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:text="@string/educationRow2Title"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:textSize="15sp"
                            android:text="@string/educationRow2Description"/>
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/ic_rice_university_seal"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:paddingVertical="5dp"
                            android:text="@string/educationRow3Institute"
                            android:textColor="#413A38"
                            android:textStyle="bold"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:textColor="#413A38"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:text="@string/educationRow3Title"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:textSize="15sp"
                            android:text="@string/educationRow3Description"/>
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bad6c4"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/ic_cisco" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:paddingVertical="5dp"
                            android:text="@string/educationRow4Institute"
                            android:textColor="#413A38"
                            android:textStyle="bold"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:textColor="#413A38"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:text="@string/educationRow4Title"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:textSize="15sp"
                            android:text="@string/educationRow4Description"/>
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/ic_cisco"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:paddingVertical="5dp"
                            android:text="@string/educationRow4Institute"
                            android:textColor="#413A38"
                            android:textStyle="bold"
                            android:textSize="15sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:textColor="#413A38"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:text="@string/educationRow5Title"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:textSize="15sp"
                            android:text="@string/educationRow5Description"/>
                            />
                    </LinearLayout>
                </LinearLayout>




            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/full_name"
                android:src="@drawable/ic_iconmonstr_cv_2" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/skillsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/skills"
                android:src="@drawable/ic_iconmonstr_code_2"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright"
            android:textColor="#ff808080"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright_2"
            android:textColor="#ff808080"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>